# cam-pos-system

./: Cargo.toml  README.md  Rocket.toml  index.html
.github/workflows/: gh-pages.yml
docs/: activity.puml
examples/: canny.rs  hough.rs  matching.rs  mosse.rs  qrcode.rs  train_hog_detector.rs  webcam.rs
pkg/: README.md  cam_pos_system.d.ts  cam_pos_system.js  cam_pos_system_bg.wasm  cam_pos_system_bg.wasm.d.ts  package.json
res/: hog_bayes_model.json  labels.txt
res/training/: webcam01.txt  webcam02.txt  webcam03.txt  webcam04.txt  webcam05.txt  webcam06.txt  webcam10.txt
scripts/: .gitignore  README.md  train.py
src/: bbox.rs  config.rs  coords.rs  detection.rs  detector.rs  frame.rs  lib.rs  main.rs  object_finder.rs  stream.rs  tracker.rs  wasm.rs  yolo.rs
src/dataset/: folder_dataset.rs  mod.rs
src/object_detection/: mod.rs
src/ssd/: dataset.rs  lenet.rs  mobilenet.rs  mod.rs  model.rs  predictable.rs  trainable.rs  yolo.rs
src/video_stream/: gif_stream.rs  mjpeg_stream.rs  mod.rs  webcam_stream.rs
src/wasm/: mod.rs
src/wasm/gui/: header.rs  mod.rs  webcam.rs
static/: index.html  index.js
