[package]
name = "cam-pos-system"
version = "0.1.0"
edition = "2021"
authors = ["Christian <chriamue@gmail.com>"]
description = "Capture birds in your garden, running on raspberry pi."
license = "MIT"
readme = "README.md"
repository = "https://github.com/rusty-rails/cam-pos-system"

[dependencies]
bardecoder = "0.3.0"
format-bytes = "0.1"
futures = "0.3.21"
image = { version = "0.23.1", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = "0.22.0"
mosse = { git = "https://github.com/chriamue/mosse-tracker", branch = "upgrade-deps" }
nalgebra = "0.31.0"
nokhwa = { version = "0.9.4", features = ["input-v4l", "output-threaded"] }
num = "0.4.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rusttype = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20", features = ["full"] }
