[package]
name = "cam-pos-system"
version = "0.1.0"
edition = "2021"
authors = ["Christian <chriamue@gmail.com>"]
description = "Capture birds in your garden, running on raspberry pi."
license = "MIT"
readme = "README.md"
repository = "https://github.com/rusty-rails/cam-pos-system"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["server"]
server = ["tokio", "rocket", "nokhwa"]

[dependencies]
bardecoder = "0.3.0"
float-ord = "0.3.2"
format-bytes = "0.1"
futures = "0.3.21"
image = { version = "0.23.1", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.22.0", default-features = false }
mosse = { git = "https://github.com/chriamue/mosse-tracker", branch = "dev", default-features = false }
nalgebra = "0.31.0"
nokhwa = { version = "0.9.4", features = [
    "input-v4l",
    "output-threaded",
], optional = true }
num = "0.4.0"
rayon = { version = "1.5.3", optional = true }
rocket = { version = "0.5.0-rc.2", features = ["json"], optional = true }
rusttype = "0.9.2"
rustfft = "6.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20", features = ["full"], optional = true }
tract-onnx = { version = "=0.17.0" }
ndarray = { version = "0.15.3" }

[dev-dependencies]
approx = { version = "0.5", default-features = false }

[target.wasm32-unknown-unknown.dependencies]
nokhwa = { version = "0.9.4", default-features = false, features = [
    "input-jscam",
] }
console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
